# gitignore

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md
src/: main.rs
