[package]
name = "gitignore"
version = "0.1.0"
authors = ["Antoine Gagné <gagnantoine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
glob = "0.3"
reqwest = "0.10.8"
structopt = { version = "0.3", features = [ "suggestions", "color", "wrap_help" ] }
tokio = { version = "0.2.21", features = ["macros"] }
